# wanderinginn.neocities.org

./: .gitignore  0-extract-site-archive.sh  1-parse-diffs.rb  2-download-site.sh  3-compress-website.sh  3-generate-texts.rb  4-breakbreak.rb  5-generate-site.rb  6-deploy.sh  7-compress-website.sh  Cargo.toml  Dockerfile  Gemfile  LICENSE  Makefile  README.md  base.css  diff.html.erb  homebrew.html  index.html.erb  login-wayback.rb  percent-usage.sh  ping-wayback.rb  post-times.R  royalroad.csv  royalroad.rb  royalroad.sh  statistics.html.erb
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  download.yml  ping.yml
src/: main.rs
util/: royalroad.csv  royalroad.xlsx
