[package]
name = "readable"
version = "0.1.0"
authors = ["Jonathan Chang <me@jonathanchang.org>"]
edition = "2018"

[profile.release]
opt-level = "s"
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 16
rpath = false

[dependencies]
url = "~1"
glob = "~0"
regex = "~1"
lazy_static = "~1"
exitfailure = "~0.5"
rayon = "~1.3"
indicatif = {version = "~0.14", features = ["with_rayon"]}
readability = {version = "~0.1", default-features = false}
dissolve = "~0.2"
