[package]
name = "readable"
version = "0.1.0"
authors = ["Jonathan Chang <me@jonathanchang.org>"]
edition = "2018"

[profile.release]
opt-level = "s"
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 16
rpath = false

[dependencies]
url = "~2"
glob = "~0"
regex = "~1"
lazy_static = "~1"
exitfailure = "~0"
rayon = "~1"
indicatif = {version = "~0", features = ["rayon"]}
readability = {version = "~0", default-features = false}
dissolve = "~0"
